--- a/linkloop.html
+++ b/linkloop.html
@@ -11,7 +11,6 @@
     <div id="initial_page">
         <div class="box center" style=" padding: 40px !important; border-radius: 30px;">
             <p id="def_text">LinkLoop</p>
-            <p style="font-size: 10px;">by Behzad</p>
             <p>Already have an account?</p>
             <button class="button" onclick="login_page()">Login</button>
             <p>New here?</p>
@@ -82,6 +81,9 @@
         <div id="main_loading" style="position: fixed"></div>
 
     </div>
+
+    <p style="font-size: 10px; position: fixed; bottom: 0.2%; left: 50%; transform: translateX(-50%); color: #272727; font-weight: 600;">by Behzad</p>
+
 
     <script src="linkloop.js"></script>
 </body>
