--- a/linkloop.html
+++ b/linkloop.html
@@ -8,7 +8,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="initial_page">
+    <div class="intro">
+    <h1>
+      <span>L</span>
+      <span>i</span>
+      <span>n</span>
+      <span>k</span>
+      <span>L</span>
+      <span>o</span>
+      <span>o</span>
+      <span>p</span>
+    </h1>
+  </div>
+    <div id="initial_page" style="display: none;">
         <div class="box center" style=" padding: 40px !important; border-radius: 30px;">
             <p id="def_text">LinkLoop</p>
             <p>Already have an account?</p>
@@ -82,8 +94,7 @@
 
     </div>
 
-    <p style="font-size: 10px; position: fixed; bottom: 0.2%; left: 50%; transform: translateX(-50%); color: #272727; font-weight: 600;">by Behzad</p>
-
+    <p style="font-size: 10px; position: fixed; bottom: -8px; left: 50%; transform: translateX(-50%); color: #272727; font-weight: 600;">by Behzad</p>
 
     <script src="linkloop.js"></script>
 </body>
