--- a/linkloop.html
+++ b/linkloop.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML>
-<!-- loadings not working due to id clash -->
+<!DOCTYPE HTML?
 <html>
 <head>
     <link rel="stylesheet" href="linkloop.css">
